<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/background_selector"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_currency"
        android:layout_alignStart="@+id/text_currency"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_gold_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_value"
        android:layout_alignStart="@+id/text_value"
        android:textSize="20sp"/>

</RelativeLayout>