...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fab_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_account_balance_white_18dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_wallet"
        android:layout_width="wrap_content"
...
